# sophos-central-gui

./: .bandit  .gitignore  README.md  SECURITY_REVIEW.md  SophosCentralGUI.spec  app_paths.py  audit_log.py  auth.py  cli.py  credential_store.py  credentials.env.example  git_auto_update.py  main.py  pyproject.toml  sync_runner.py  sync_scheduler.py  todo.md
.cursor/skills/release-github-installers/: SKILL.md
.github/workflows/: build-installers.yml
packaging/linux/: postinst  postrm  sophos-central-gui.desktop
packaging/macos/scripts/: postinstall
packaging/windows/: SophosCentralGUI.iss
scripts/: _pw-fw-subtabs.mjs  build-linux.sh  build-macos.sh  build-windows.ps1
static/css/: app.css
static/help/: account-password.html  account-profile.html  flyout-alert.html  flyout-firewall-detail.html  flyout-license.html  help-doc.css  index.html  modal-add-user.html  modal-central-credential.html  modal-create-firewall-group.html  modal-delete-local.html  modal-edit-user-profile.html  modal-export-table.html  modal-firewall-location.html  modal-firmware.html  modal-table-columns.html  page-dashboard.html  page-firewalls.html  page-groups.html  page-licenses.html  page-tenants.html  settings-about.html  settings-credentials.html  settings-general.html  settings-sync.html  settings-update.html  settings-users.html  sign-in.html
static/js/: app.js
templates/: index.html
