[project]
name = "sophos-central-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=43.0.0",
    "sfos-central-sdk>=0.9.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "argon2-cffi>=25.1.0",
    "itsdangerous>=2.2.0",
]

[project.scripts]
sophos-gui-clear-admin-password = "cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli", "credential_store"]
packages = []
