[project]
name = "sfos-central-firewall-management"
version = "0.1.6"
description = "Showcase application that uses the Sophos Central APIs (https://developer.sophos.com) to interact with firewalls managed in Sophos Central."
readme = "README.md"
license = { text = "Apache License, Version 2.0" }
requires-python = ">=3.12"
dependencies = [
    "cryptography>=43.0.0",
    "sfos-central-sdk>=0.9.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "argon2-cffi>=25.1.0",
    "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
bundle = ["pyinstaller>=6.6"]
dev = ["bandit>=1.8.0"]

[project.scripts]
sophos-gui-clear-admin-password = "cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli", "credential_store"]
packages = []

[tool.bandit]
# SQL: ? placeholders; fragments use allowlisted columns or validated identifiers.
skips = ["B608"]
exclude_dirs = [".venv", "dist", "build", ".git", "packaging/stage"]
